# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  task17  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  ohje.md  testaus.md  tunnit.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoly.md  task3.md  task3.py  task4.md  task4.py
src/: index.py
src/backend/: backend.py  database.py  dwg_mgmt.py  user_mgmt.py
src/database/: backend.py  database.py
src/entities/: drawing.py  user.py
src/services/: login_manager.py
src/tests/: backend_test.py  database_test.py  dwg_mgr_test.py  user_management.py  user_mgr_test.py
src/ui/: common.py  drawing.py  drawing_view.py  login.py  login_view.py  menu.py  menu_view.py  prompt_drawing.py  prompt_new_dwg.py  prompt_pw.py  prompt_text.py  ui.py
